--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/lovable-uploads/Logo.png" />
 
-    <title>Watermark Alpha - Decoding Crypto, Delivering Alpha</title>
-    <meta name="description" content="Watermark Alpha offers a Crypto Advisory service delivering risk-managed, tax-optimized exposure to digital (crypto) assets." />
-    <meta name="author" content="Watermark Alpha" />
+    <title>AumAlpha - Decoding Crypto, Delivering Alpha</title>
+    <meta name="description" content="AumAlpha offers a Crypto Advisory service delivering risk-managed, tax-optimized exposure to digital (crypto) assets." />
+    <meta name="author" content="AumAlpha" />
   
     <!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
-    <meta property="og:title" content="Watermark Alpha - Digital Asset Management" />
-    <meta property="og:description" content="Watermark Alpha is a Crypto Advisory, offering risk-managed, tax optimised exposure to crypto assets." />
+    <meta property="og:title" content="AumAlpha - Digital Asset Management" />
+    <meta property="og:description" content="AumAlpha is a Crypto Advisory, offering risk-managed, tax optimised exposure to crypto assets." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.watermarkalpha.org/lovable-uploads/Logo.png" />
   
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@watermarkalpha" />
-    <meta name="twitter:title" content="Watermark Alpha - Digital Asset Management" />
-    <meta name="twitter:description" content="Watermark Alpha is a Crypto Advisory, offering risk-managed, tax optimised exposure to crypto assets." />
+    <meta name="twitter:title" content="AumAlpha - Digital Asset Management" />
+    <meta name="twitter:description" content="AumAlpha is a Crypto Advisory, offering risk-managed, tax optimised exposure to crypto assets." />
     <meta name="twitter:image" content="https://www.watermarkalpha.org/lovable-uploads/Logo.png" />
   
     <!-- Fonts -->
