--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/png" href="/lovable-uploads/Logo.png" />
 
     <title>AumAlpha - Decoding Crypto, Delivering Alpha</title>
-    <meta name="description" content="AumAlpha offers a Crypto Advisory service delivering risk-managed, tax-optimized exposure to digital (crypto) assets." />
+    <meta name="description" content="AumAlpha is a global crypto advisory, offering risk-managed exposure to digital assets." />
     <meta name="author" content="AumAlpha" />
   
     <!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
     <meta property="og:title" content="AumAlpha - Digital Asset Management" />
-    <meta property="og:description" content="AumAlpha is a Crypto Advisory, offering risk-managed, tax optimised exposure to crypto assets." />
+    <meta property="og:description" content="AumAlpha is a global crypto advisory, offering risk-managed exposure to digital assets." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.watermarkalpha.org/lovable-uploads/Logo.png" />
   
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@watermarkalpha" />
     <meta name="twitter:title" content="AumAlpha - Digital Asset Management" />
-    <meta name="twitter:description" content="AumAlpha is a Crypto Advisory, offering risk-managed, tax optimised exposure to crypto assets." />
+    <meta name="twitter:description" content="AumAlpha is a global crypto advisory, offering risk-managed exposure to digital assets." />
     <meta name="twitter:image" content="https://www.watermarkalpha.org/lovable-uploads/Logo.png" />
   
     <!-- Fonts -->
