--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="AumAlpha" />
   
     <!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
-    <meta property="og:title" content="AumAlpha - Digital Asset Management" />
+    <meta property="og:title" content="AumAlpha - Crypto Asset Advisory" />
     <meta property="og:description" content="AumAlpha is a global crypto advisory, offering risk-managed exposure to digital assets." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.watermarkalpha.org/lovable-uploads/Logo.png" />
@@ -19,7 +19,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@watermarkalpha" />
-    <meta name="twitter:title" content="AumAlpha - Digital Asset Management" />
+    <meta name="twitter:title" content="AumAlpha - Crypto Asset Advisory" />
     <meta name="twitter:description" content="AumAlpha is a global crypto advisory, offering risk-managed exposure to digital assets." />
     <meta name="twitter:image" content="https://www.watermarkalpha.org/lovable-uploads/Logo.png" />
   
