--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="keywords" content="crypto PMS, crypto fund, digital asset management, crypto advisory, web3 investment, tokenized portfolios, blockchain fund, crypto investment platform, decentralized finance, crypto portfolio management" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/lovable-uploads/Logo.png" />
